<resources>
    <string name="app_name">EasyNutrition_Prototype</string>
    <string name="tvUserType">Nutricionista</string>
    <string name="tvRegisterTitle">Registremos tus datos</string>
    <string name="tvRegisterSub">Para empezar, cuéntanos...</string>
    <string name="etHintName">nombre</string>
    <string name="tvQuestionName">¿Cuál es tu nombre?</string>
    <string name="tvQuestionLastname">¿Y tu apellido?</string>
    <string name="etHintLastname">apellido</string>
    <string name="tvQuestionGender">¿Cuál es tu sexo?</string>
    <string name="btMan">Hombre</string>
    <string name="btWoman">Mujer</string>
    <string name="tvGenderSub">Sexo:</string>
    <string name="tvBirthdaySub">Fecha de nacimiento:</string>
    <string name="etBirthday">Selecciona tu fecha de nacimiento</string>
    <string name="tvCountrySub">¿En dónde vives?</string>
    <string name="acCountry">País</string>
    <string name="etTelephone">Número de celular</string>
    <string name="tvTelephoneSub">Teéfono de contacto:</string>
    <string name="btNext">Siguiente</string>
    <string name="tvCreateTitle">Creemos tu cuenta</string>
    <string name="tv1">Al continuar, estarás aceptando nuestros</string>
    <string name="tv4">Políticas de Privacidad</string>
    <string name="tv3">y</string>
    <string name="tv2">Términos y Condiciones</string>
    <string name="btGoogle">Continuar con Google</string>
    <string name="btFacebook">Continuar con Facebook</string>
    <string name="btCorreo">Continuar con Correo</string>
    <string name="tvApplStep3Sub">Ingresa tu email</string>
    <string name="tvPasswordSub">Crea tu contraseña</string>
    <string name="tvConfirmPassword">Confirma tu contraseña</string>
    <string name="etHintEmail">email</string>
    <string name="etHintPassword">contraseña</string>
    <string name="etHintConfirmPassword">contraseña</string>
    <string name="btGoAppl">Registrarme</string>
    <string name="tvApplSub2">Adjunta tu CV</string>
    <string name="tvApplStep3Sub_">Completa los requisitos y envía tu solicitud de posible contratación.</string>
    <string name="btGoAppl_">Enviar</string>
    <string name="tvApplSub2_1">Selecciona tu(s) especialidad(es)</string>
    <string name="cbApplStep2_1_1">Nutrición clínica</string>
    <string name="cbApplStep2_1_2">Nutrición para aumento de masa muscular</string>
    <string name="cbApplStep2_1_3">Nutrición para bajar de peso</string>
    <string name="cbApplStep2_1_4">Sobrepeso y obesidad</string>
    <string name="btCV">Ningún archivos seleccionado</string>
    <string name="tvAppl3Title">Solicitud de Nutricionista</string>
    <string name="tvApplStep3Sub_1">Estado de solicitud:</string>
    <string name="btGoAppl_1">Comienza a usar la aplicación</string>
    <string name="tvPassed">APROBADO</string>
    <string name="tv_nutritionist">Tu nutricionista, cerca de ti.</string>
    <string name="bt_start">Empezar</string>
    <string name="tv_account">¿Ya tienes una cuenta?</string>
    <string name="tv_login">Inicia Sesión</string>
    <string name="register">Registremos tus datos</string>
    <string name="start">Para empezar, cuéntanos...</string>
    <string name="name">¿Cuál es tu nombre?</string>
    <string name="name1">Nombre</string>
    <string name="lastname">¿Cuál es tu apellido?</string>
    <string name="lastname1">Apellido</string>
    <string name="gender">¿Cuál es tu sexo?</string>
    <string name="patient">Paciente</string>
    <string name="gender_">Sexo:</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="date">Fecha de nacimiento:</string>
    <string name="date1">Seleccione su fecha de nacimiento</string>
    <string name="phone">Teléfono de contacto:</string>
    <string name="phone1">Número de celular</string>
    <string name="live">¿En dónde vives?</string>
    <string name="country">País</string>
    <string name="size">¿Cuánto mides? (cm)</string>
    <string name="weight">¿Cuánto pesas?</string>
    <string name="active">¿Que tan activo eres?</string>
    <string name="active1">Selecciona tu nivel de actividad</string>
    <string name="next">Siguiente</string>
    <string name="patient3">Paciente</string>
    <string name="createaccount">Creemos tu cuenta</string>
    <string name="google">Continuar con Google</string>
    <string name="fb">Continuar con Facebook</string>
    <string name="email">Continuar con correo</string>
    <string name="terms">Al continuar, estarás aceptando nuestros Términos y Condiciones- Políticas de Privacidad</string>
    <string name="accept">Al continuar, estarás aceptando nuestros</string>
    <string name="terms_cond">Términos y Condiciones</string>
    <string name="and">y</string>
    <string name="pol_privacy">Políticas de Privacidad</string>
    <string name="tvSelecUserTitle">¿Qué usuario eres?</string>
    <string name="tvSelectUserDescription">Elige tu tipo de usuario para comenzar a utilizar la aplicación</string>
    <string name="btSelectPatient">Paciente</string>
    <string name="tvSelectNutritionist">Nutricionista</string>
    <string name="ivSelectNutritionist">SelectNutritionist</string>
    <string name="ivSelectPatient">SelectPatient</string>
    <string name="tvPatient">Patient</string>

    <string name="tvGreeting">Hola,</string>
    <string name="tvUserName">Roberto</string>
    <string name="tvUserRole">Patient</string>
    <string name="tvSeparator">|</string>
    <string name="tvPlanSubscription">Plan Free</string>
    <string name="ivNotificationLogoD">notification logo</string>
    <string name="ivUserProfileImageD">user profile image</string>
    <string name="tvNoNutritionist">No cuentas con un nutricionista asignado actualmente</string>
    <string name="tvBookAppointment">Reserva una cita para comenzar</string>
    <string name="btBookAppointment">Quiero reservar una cita</string>
    <string name="tvTipTitle">Tip nutricional del día</string>
    <string name="tvTipDescription">Puedes consultar con tu nutricionista para que evalúe tu caso particularmente.</string>
    <string name="cdTip">Image Tip Nutricional</string>
    <string name="tvNutrionalTipText">Controla la porción de tus alimentos usando guías de medición como tus manos.</string>
    <string name="ivcalendarmenu">ivCalendarMenu</string>
    <string name="ivhomemenu">ivHomeMenu</string>
    <string name="ivsettingsmenu">ivSettingsMenu</string>
    <string name="ivchatmenu">ivChatMenu</string>
    <string name="btViewReservations">Ver mis reservas</string>
    <string name="tvReserve">Reserva</string>
    <string name="tvDescriptionR">Ingresa tus preferencias para la reserva y encuentra a tu nutricionista ideal segús tus objetivos</string>
    <string name="tvTypeOfConsulting">Tipo de asesoría</string>
    <string name="rbOptionOne">Nutrición clínica</string>
    <string name="rbOptionTwo">Nutrición para aumento de masa muscular</string>
    <string name="rbOptionThree">Nutrición para bajar de peso</string>
    <string name="rbOptionFour">Sobrepeso y obesidad</string>
    <string name="tvLabelDate">¿Para cuando sería la reserva?</string>
    <string name="tvLabelTimeStart">Hora de Inicio</string>
    <string name="tvLabelTimeEnd">Hora de Fin</string>
    <string name="tTimeEnd">hh:mm</string>
    <string name="tTimeStart">hh:mm</string>
    <string name="dDateReserve">Seleccione la fecha</string>
    <string name="btSearchNutritionist">Encontrar a mi nutricionista</string>
    <string name="tvChats">Chats</string>
    <string name="ivBack001">ivBack001</string>
    <string name="btBack001">btBack001</string>
    <string name="tvDetailReserve001">Nutrición para aumento de masa muscular</string>
    <string name="tvDetailReserve002">15/05/2022</string>
    <string name="tvDetailReserve003">04:00 PM</string>
    <string name="tvDetailReserve004">05:00 PM</string>
    <string name="tvReserve002">Reserva</string>
    <string name="ivdetailreserve002">ivDetailReserve002</string>
    <string name="ivdetailreserve004">ivDetailReserve004</string>
    <string name="ivdetailreserve001">ivDetailReserve001</string>
    <string name="ivdetailreserve003">ivDetailReserve003</string>
    <string name="tvIdealAdvisor">Tu asesor ideal</string>
    <string name="tvAvgRating">4.95</string>
    <string name="tvToralReviews">(25)</string>
    <string name="tvNutritionistName">Jhony Coronel</string>
    <string name="tvNutritionistPrice">S/ 40.00 / hora</string>
    <string name="tvNutritionistPatients">25 pacientes</string>
    <string name="btReserveNutritionist">Reservar</string>
    <string name="tvNutritionistSpeciality">Especialista en Aumento de masa muscular</string>
    <string name="ivPersonIcon">PersonsLogo</string>
    <string name="ivCardNutritionist">CardNutritionist</string>
    <string name="ibRefresh">RefreshLogo</string>
    <string name="starlogo">StarLogo</string>
    <string name="btNutritionist">Nutritionist</string>
    <string name="ivdtip">ivDTip</string>
    <string name="ivcardnutrionist">ivCardNutrionist</string>
</resources>
