<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_accountp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/patient3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="296dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:text="@string/createaccount"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_accountp" />

    <Button
        android:id="@+id/bt_google"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/google"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/bt_fb"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#002CFF"
        android:text="@string/fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_google" />

    <Button
        android:id="@+id/bt_email"
        android:layout_width="249dp"
        android:layout_height="68dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#47FF86"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_fb" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="309dp"
        android:layout_height="32dp"
        android:text="@string/accept"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_email"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/tv_cond"
        android:layout_width="185dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="104dp"
        android:text="@string/terms_cond"
        android:textColor="#47FF86"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_and"
        android:layout_width="27dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/and"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cond" />

    <TextView
        android:id="@+id/tv_pol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="100dp"
        android:text="@string/pol_privacy"
        android:textColor="#47FF86"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_and" />

</androidx.constraintlayout.widget.ConstraintLayout>